--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,321 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Художній Музей</title>
+    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body id="page-body" class="page__body">
+    <div class="page__wrapper">
+      <header class="page__header header">
+        <div class="header__container _container">
+          <div class="header__body">
+            <div class="menu__icon icon-menu">
+              <div class="icon-menu__wrapper">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            <div class="header__menu menu">
+              <nav class="menu__body">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a data-goto=".page__body" href="#" class="menu__link">
+                      Головна
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a data-goto=".events" href="#" class="menu__link">
+                      Події
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a data-goto=".lecture" href="#" class="menu__link">
+                      Лекції
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a data-goto=".gallery" href="#" class="menu__link">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a data-goto=".subscription" href="#" class="menu__link">
+                      Підписка
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a data-goto=".contacts" href="#" class="menu__link">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <a target="blank" class="header__logo header__logo--tablet-3-6 header__logo--desktop-5-8 logo"
+              href="#page__body">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+        </div>
+      </header>
+      <main class="page__main">
+        <section class="section__home home">
+          <div class="home__content">
+            <div class="home__container _container">
+              <div class="home__body home__body--tablet-1-3 home__body--desktop-1-5">
+                <h1 class="home__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+                <a target="blank" href="#page-body" class="home__tickets-link">
+                  КВИТКИ
+                  <span class="_icon-arrow"></span>
+                </a>
+                <a data-goto=".events" href="#" class="home__events menu__link">
+                  ПОДІЇ
+                </a>
+              </div>
+            </div>
+          </div>
+          <a target="blank" href="https://goo.gl/maps/JCMh7pRGP5nvxgqq6" class="home__image ibg">
+            <img class="ibg__img" src="./images/Home/muzeum.jpg" alt="Національний художрій музей України">
+          </a>
+        </section>
+        <section class="section__events events">
+          <div class="events__container _container">
+            <h2 class="events__title title-section">Актуальні події</h2>
+            <div class="events__event event event--tablet">
+              <a target="blank" href="#page-body"
+                class="event__image event__content--tablet-1-6 event__image--desktop-1-7 ibg">
+                <img src="./images/events/1.jpg" alt="Picture landscape" class="ibg__img">
+              </a>
+              <a target="blank" href="#page-body"
+                class="event__content content-event event__content--tablet-1-4 event__content--desktop-9-12">
+                <h3 class="content-event__title">
+                  ВИСТАВКА
+                  <span class="content-event__date">26.08-29.11.2019</span>
+                </h3>
+                <h3 class="content-event__subtitle subtitle-content">Йду і повертаюсь</h3>
+                <p class="content-event__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </p>
+              </a>
+            </div>
+            <div class="events__event event event--tablet">
+              <a target="blank" href="#page-body"
+                class="event__image event__content--tablet-1-6 event__image--desktop-1-7 ibg">
+                <img src="./images/events/2.jpg" alt="Picture landscape" class="ibg__img">
+              </a>
+              <a target="blank" href="#page-body"
+                class="event__content event__content--tablet-1-4 event__content--desktop-9-12 content-event">
+                <h3 class="content-event__title">
+                  ВИСТАВКА
+                  <span class="content-event__date">26.08-29.11.2019</span>
+                </h3>
+                <h3 class="content-event__subtitle subtitle-content">І спогади і мрії</h3>
+                <p class="content-event__text">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </a>
+            </div>
+          </div>
+        </section>
+        <section class="section__lecture lecture">
+          <div class="lecture__container _container">
+            <a target="blank" href="page__body" class="lecture__content">
+              <h3 class="lecture__title title-content">
+                ЛЕКЦІЯ
+                <span class="lecture__title-date">26/08/2019 - 11:00</span>
+              </h3>
+              <h3 class="lecture__subtitle subtitle-content">
+                Від класицизму до
+                <br>
+                романтизму
+              </h3>
+            </a>
+          </div>
+        </section>
+        <section class="section__gallery gallery">
+          <div class="gallery__container _container">
+            <h2 class="gallery__title title-section">Галерея</h2>
+            <div class="gallery__items gallery__items--desktop _swiper">
+              <div class="gallery__item gallery__item--desktop-1-4">
+                <a target="blank" href="#page-body" class="gallery__image ibg">
+                  <img src="./images/gallery/1.jpg" alt="image 1" class="ibg__img">
+                </a>
+              </div>
+              <div class="gallery__item gallery__item--desktop-5-12">
+                <a target="blank" href="#page-body" class="gallery__image ibg">
+                  <img src="./images/gallery/2.jpg" alt="image 2" class="ibg__img">
+                </a>
+              </div>
+              <div class="gallery__item gallery__item--desktop-1-8">
+                <a target="blank" href="#page-body" class="gallery__image ibg">
+                  <img src="./images/gallery/3.jpg" alt="image 3" class="ibg__img">
+                </a>
+              </div>
+              <div class="gallery__item gallery__item--desktop-9-12">
+                <a target="blank" href="#page-body" class="gallery__image ibg">
+                  <img src="./images/gallery/4.jpg" alt="image 4" class="ibg__img">
+                </a>
+              </div>
+            </div>
+            <div class="pagination"></div>
+          </div>
+        </section>
+        <section class="section__subscription subscription">
+          <div class="subscription__container _container">
+            <h2 class="subscription__title title-section title-section--white">
+              Підписка
+            </h2>
+            <p class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              class="subscription__form form"
+              action="#"
+              method="get"
+            >
+              <div class="form__field">
+                <input
+                  id="user-email"
+                  class="form__input"
+                  type="email"
+                  name="user-email"
+                  placeholder="E-mail"
+                  required
+                >
+                <label for="user-email"></label>
+              </div>
+              <button class="form__button _icon-arrow" type="submit"></button>
+            </form>
+          </div>
+        </section>
+      </main>
+      <footer class="page__footer footer">
+        <div class="footer__container _container">
+          <div class="footer__body">
+            <div class="footer__content">
+              <div class="footer__top footer__top--tablet-1-1">
+                <a target="blank" class="footer__logo logo" href="#page__body">
+                  NA
+                  <br>
+                  MU
+                </a>
+                <div class="footer__scls">
+                  <a target="blank" href="https://www.facebook.com/" class="footer__scls-link _icon-facebook"></a>
+                  <a target="blank" href="https://www.instagram.com/" class="footer__scls-link _icon-insta"></a>
+                </div>
+              </div>
+              <div class="
+                  footer__work-time
+                  footer__work-time--tablet-2-3
+                  footer__work-time--desktop-3-4
+                  work-time
+                ">
+                <h3 class="work-time__title title-footer">Графік роботи</h3>
+                <p class="work-time__text">
+                  <span class="times">12:00 — 20:00</span> середа
+                  <br>
+                  <span class="times">12:00 — 20:00</span> четвер
+                  <br>
+                  <span class="times">12:00 — 20:00</span> п’ятниця
+                  <br>
+                  <span class="times">11:00 — 19:00</span> субота
+                  <br>
+                  <span class="times">11:00 — 19:00</span> неділя
+                </p>
+                <p class="work-time__text">
+                  <span class="weekend">Вихідні:</span> понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+              <div class="
+                  footer__contacts
+                  footer__contacts--tablet-4-5
+                  footer__contacts--desktop-5-6
+                  contacts
+                ">
+                <h3 class="contacts__title title-footer">Контакти:</h3>
+                <a target="blank" href="https://goo.gl/maps/kYe3YHQw7YHG11JTA"
+                  class="contacts__link contacts__link--address">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="phone:+380442781357" class="contacts__link contacts__link--phone">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="phone:+380442787454" class="contacts__link contacts__link--fax">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a target="blank" href="mailto:info@namu.kiev.ua" class="contacts__link contacts__link--email">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+              <a class="up _icon-arrow-t"></a>
+              <span
+                class="
+                  footer__line
+                  footer__line--1-2
+                  footer__line--tablet-2-5
+                  footer__line--desktop-7-7
+                "
+             ></span>
+              <ul class="
+                  footer__menu
+                  footer__menu--tablet-2-3
+                  footer__menu--desktop-8-9
+                ">
+                <li class="footer__item">
+                  <a data-goto=".gallery" href="#" class="footer__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a data-goto=".events" href="#" class="footer__link">
+                    Виставки та події
+                  </a>
+                </li>
+              </ul>
+              <ul class="
+                  footer__menu
+                  footer__menu--tablet-4-5
+                  footer__menu--desktop-10-11
+                ">
+                <li class="footer__item">
+                  <a
+                    target="blank"
+                    data-goto=".subscription"
+                    href="#"
+                    class="footer__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="footer__item">
+                  <a
+                    data-goto=".contacts"
+                    href="#"
+                    class="footer__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__foot">
+              <div class="footer__author">Designed by Zhyriada Marina</div>
+              <div class="footer__copy">Copyright © 2019. All Rights Reserved.</div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
