--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,335 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum landing page</title>
+    <link rel="icon" href="./images/NA MU.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-actions">
+            <a href="#" class="header__menu"></a>
+            <a href="/" class="logo">
+              <img
+              class="logo__image"
+                src="./images/NA MU.png"
+                alt="logo NAMU"
+              >
+            </a>
+          </div>
+          <div class="grid grid--desk">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--1-6">
+              <h1 class="header__title">
+                ХУДОЖНІЙ
+                <br>
+                МУЗЕЙ
+              </h1>
+            </div>
+          </div>
+          <div class="grid grid--desk">
+            <div class="grid__item grid__item--tablet-1-3 grid__item--3-5">
+              <div class="header__ticket">
+                <div class="header__field">КВИТКИ</div>
+                <a href="#" class="header__link"></a>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="header__event">
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__section" id="actual">
+        <div class="container">
+          <div class="grid grid--desk">
+            <div class="grid__item grid__item--tablet-1-4">
+              <h2 class="page__section-title">
+                Актуальні події
+              </h2>
+            </div>
+            <div class="grid__item grid__item--tablet-1-6 grid__item--1-7">
+              <img
+                class="page__section-image"
+                src="./images/event.png"
+                alt="first-event"
+              >
+            </div>
+            <div class="grid__item grid__item--tablet-1-4 grid__item--9-11">
+              <div class="page__section-wrap">
+                <div class="page__section-event">ВИСТАВКА</div>
+                <div class="page__section-data">26.08-29.11.2019</div>
+              </div>
+              <h3 class="page__section event__title event__title--element">
+                Йду і повертаюсь
+              </h3>
+              <div class="page__section page__section-description">
+                Національний Художній Музей України презентує унікальну частину колекції
+                Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </div>
+            </div>
+
+            <div class="grid__item grid__item--tablet-1-6 grid__item--1-7">
+              <img
+                class="page__section-image"
+                src="./images/event2.png"
+                alt="first-event"
+              >
+            </div>
+            <div class="grid__item grid__item--tablet-1-4 grid__item--9-11">
+              <div class="page__section-wrap">
+                <div class="page__section-event">ВИСТАВКА</div>
+                <div class="page__section-data">26.08-29.11.2019</div>
+              </div>
+              <h3 class="page__section event__title event__title--element">
+                І спогади і мрії
+              </h3>
+              <div class="page__section page__section-description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці 
+                Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section lection">
+        <div class="lection__image-container">
+          <img
+            class="lection__image"  
+            src="./images/event3.png"
+            alt="event3"
+          >
+        </div>
+        <div class="container">
+          <div class="lection__info">
+            <div class="lection__wrap">
+              <div class="lection__type">
+                ЛЕКЦІЯ
+              </div>
+              <div class="lection__data">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <h2 class="lection__title">
+              Від класицизму до романтизму
+            </h2>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <div class="grid grid--desk">
+            <div class="grid__item grid__item--tablet-1-2 grid__item--1-3">
+              <h2 class="page__section-title">
+                Галерея
+              </h2>
+            </div>
+          </div>
+          <div class="gallery__image-container">
+            <div class="gallery__scroll">
+              <img
+                class="gallery__image"
+                src="./images/image1.png"
+                alt="image-first"
+              >
+              <img
+                class="gallery__image image__ipad"
+                src="./images/imageIpad.png"
+                alt="image-second"
+              >
+              <img
+                class="gallery__image"
+                src="./images/image3.png"
+                alt="image-third"
+              >
+              <img
+                class="gallery__image"
+                src="./images/image4.png"
+                alt="image-four"
+              >
+              <img
+                class="gallery__image"
+                src="./images/image2.png"
+                alt="image-five"
+              >
+            </div>
+          </div>
+          <div class="page__section circle">
+            <div class="circle__circles--active "></div>
+            <div class="circle__circles"></div>
+            <div class="circle__circles"></div>
+            <div class="circle__circles"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section follow" id="about-us">
+        <div class="container">
+          <div class="grid grid--desk">
+            <div class="grid__item grid__item--tablet-3-4 grid__item--5-8">
+              <h2 class="follow__title">
+                Підписка
+              </h2>
+            </div>
+            <div class="grid__item grid__item--tablet-2-5 grid__item--4-9">
+              <h3 class="follow__description">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </h3>
+            </div>
+            <div class="grid__item grid__item--tablet-2-5 grid__item--4-9">
+              <form
+                class="follow__form"
+                action="#"
+              >
+                <label for="email"></label>
+                <input
+                  id="email"
+                  class="follow__input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                >
+                <button class="follow__button"></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    
+    <footer class="footer">
+      <div class="container">
+        <div class="grid grid--desk">
+          <div class="grid__item grid__item--tablet-1-1">
+            <div class="footer__social-net">
+              <a href="#" class="logo">
+                <img
+                class="logo__image"
+                  src="./images/NA MU.png"
+                  alt="logo NAMU"
+                >
+              </a>
+              <div class="footer__icons">
+                <a
+                  class="footer__facebook icon"
+                  href="https://www.facebook.com/namu.museum/"
+                ></a>
+                <a
+                  class="footer__insta icon"
+                  href="https://www.instagram.com/namu.museum/"
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-2-3 grid__item--3-4">
+            <div class="footer__graphik">
+              <div class="footer__graphik-title">Графік роботи</div>
+              <div class="footer__graphik-description">
+                <span class="font">12:00— 20:00</span>
+                <br>
+                  середа
+                <br>
+                <span class="font">12:00— 20:00</span>
+                <br>
+                  четвер
+                <br>
+                <span class="font">12:00— 20:00</span>
+                <br>
+                  п’ятниця
+                <br>
+                <span class="font">11:00 — 19:00</span>
+                <br>
+                  субота
+                <br>
+                <span class="font">11:00 — 19:00</span>
+                <br>
+                  неділя
+                <br>                
+                <br>                
+                <span>
+                  Вихідні понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-4-5 grid__item--5-6">
+            <div class="footer__contacts" id="contacts">
+              <div class="footer__contacts-title">Контакти:</div>
+              <div class="footer__contacts-description">
+                <a href="https://goo.gl/maps/XMFRS9CU4EwBksNb9" class="footer__contacts-link">
+                  вул. М. Грушевського, 6;
+                  <br>
+                  Київ, 01001
+                </a>
+                <br>
+                <a href="tel:+38(044)278-13-57" class="footer__contacts-link">
+                  тел. +38 (044)
+                  <br>
+                  278-13-57
+                </a>
+                <br>
+                <a href="tel:+38(044)278-74-54" class="footer__contacts-link">
+                  факс +38 (044)
+                  <br>
+                  278-74-54
+                </a>
+                <br>
+                <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__menu">
+            <a href="#" class="footer__link"></a>
+          </div>
+          <div class="grid__item grid__item--tablet-2-5 grid__item--7-7">
+            <div class="footer__line"></div>
+          </div>
+
+          <div class="grid__item grid__item--tablet-2-2 grid__item--8-9">
+            <div class="footer__nav">
+              <a href="#gallery" class="footer__nav-link">Галерея</a>
+              <br>
+              <a href="#actual" class="footer__nav-link">Виставки та події</a>
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-4-4 grid__item--10-10">
+            <div class="footer__nav">
+              <a href="#about-us" class="footer__nav-link">Про Нас</a>
+              <br>
+              <a href="#contacts" class="footer__nav-link">Контакти</a>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--tablet-5-6 grid__item--11-12">
+            <div class="footer__text">
+              Designed by Zhyriada Marina
+            </div>
+          </div>
+          <div class="grid__item grid__item--tablet-1-2 grid__item--1-3">
+            <div class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
