--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,344 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="page-top">
+      <div class="container">
+        <div class="header__nav">
+          <a href="#" class="header__menu-opener"></a>
+          <a href="" class="header__logo">
+            <img src="images/logo.svg" alt="Museum">
+          </a>
+        </div>
+        <div class="header__background"></div>
+        <div 
+          class="
+          grid
+          grid--Tablet
+          grid--Desktop">
+          <div 
+            class="
+              grid__item
+              grid__item--Tablet--1-3
+              grid__item--Desktop--1-5">
+            <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
+        </div>
+        <div class="
+              grid__item
+              grid__item--Tablet--1-3
+              grid__item--Desktop--3-5">
+          <div class="header__actions">
+            <div class="header__actions-text">КВИТКИ</div>
+            <div class="header__actions-action">
+              <a href="#" class="header__actions-action--right"></a>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="page__section-1" id="events">
+        <div class="container">
+          <div class="page__section-1--title">Актуальні події</div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1-2
+                grid__item--Desktop--1-7">
+              <img src="images/section-1/photo_1.svg" alt="photo1" class="page__section-1--photo">
+            </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1-4
+                grid__item--Desktop--9-12">
+              <div class="page__section-1--date">
+                <h3 class="page__section-1--date__title">ВИСТАВКА</h3>
+                <a href="#" class="page__section-1--date__date">26.08-29.11.2019</a>
+              </div>
+              <h2 class="page__section-1--subtitle">
+                Йду і повертаюсь
+              </h2>
+              <p class="page__section-1--par">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+          <div 
+          class="
+            grid
+            grid--Tablet
+            grid--Desktop">
+          <div 
+            class="
+              grid__item
+              grid__item--Tablet--1-2
+              grid__item--Desktop--1-7">
+            <img src="images/section-1/photo_2.svg" alt="photo1" class="page__section-1--photo">
+          </div>
+          <div 
+            class="
+              grid__item
+              grid__item--Tablet--1-4
+              grid__item--Desktop--9-12">
+            <div class="page__section-1--date">
+              <h3 class="page__section-1--date__title">ВИСТАВКА</h3>
+              <a href="#" class="page__section-1--date__date">26.08-29.11.2019</a>
+            </div>
+            <h2 class="page__section-1--subtitle">
+              І спогади і мрії
+            </h2>
+            <p class="page__section-1--par">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </div>
+        </div>
+        <div class="page__section-1-photo-3">
+          <img src="images/section-1/photo_3.svg" alt="photo3" class="page__section-1-photo-3--photo">
+          <div class="box">
+            <div class="box--date">
+              <h3 class="box--date__title">ЛЕКЦІЯ</h3>
+              <a href="#" class="box--date__date">26/08/2019 - 11:00</a>
+            </div>
+            <h2 class="box__subtitle">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </div>
+      <div class="page__section-2" id="gallery">
+        <div class="container photo">
+          <div class="page__section-2__title">Галерея</div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1-3
+                grid__item--Desktop--1-4">
+                <img src="images/section-2/photo_1.svg" alt="photo-1" class="photo-1">
+              </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--4-6
+                grid__item--Desktop--5-12">
+                <img src="images/section-2/photo_2.svg" alt="photo-2" class="photo-2">
+              </div>
+          </div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Desktop--1-8">
+                <img src="images/section-2/photo_3.svg" alt="photo-3" class="photo-3">
+              </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Desktop--9-12">
+                <img src="images/section-2/photo_4.svg" alt="photo-4" class="photo-4">
+              </div>
+          </div>
+          <div class="point">
+            <div class="point__point"></div>
+            <div class="point__point"></div>
+            <div class="point__point"></div>
+            <div class="point__point"></div>
+          </div>
+        </div>
+      </div>
+      <div class="page__section-3">
+        <div class="container">
+          <div class="page__section-3__title">Підписка</div>
+          <div class="page__section-3__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
+            <div 
+              class="
+                grid
+                grid--Tablet
+                grid--Desktop">
+              <div 
+                class="
+                  grid__item
+                  grid__item--Tablet--2-5
+                  grid__item--Desktop--4-9
+                  ">
+                <div class="page__section-3--subscription">
+                  <div>
+                    <label>
+                      <input 
+                        type="email" 
+                        name="email" 
+                        placeholder="E-mail" 
+                        class="form-field"
+                        required
+                      >
+                    </label> 
+                  </div>
+                  <div class="page__section-3__actions-action">
+                    <a href="#" class="page__section-3__actions-action--right"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="page__section-4" id="contacts">
+        <div class="container">
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--1
+                grid__item--Desktop--1">
+              <div class="page__section-4__nav">
+                <a href="" class="header__logo">
+                  <img src="images/logo.svg" alt="Museum">
+                </a>
+                <div class="social-symbols">
+                  <a href="https://www.facebook.com/" class="social-symbols--facebook"></a>
+                  <a href="https://www.instagram.com/" class="social-symbols--instagram"></a>
+                </div>
+              </div>
+            </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--2-3
+                grid__item--Desktop--3-4">
+              <h3 class="page__section-4--subtitle">Графік роботи</h3>
+              <p class="page__section-4--par-1">
+                <strong>12:00 — 20:00</strong> середа
+                <br>
+                <strong>12:00 — 20:00</strong> четвер
+                <br>
+                <strong>12:00 — 20:00</strong> п’ятниця 
+                <br>
+                <strong>11:00 — 19:00</strong> субота
+                <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+              <p class="page__section-4--par-2">
+                <strong>Вихідні:</strong> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </p>
+            </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--4-5
+                grid__item--Desktop--5-6">
+              <div class="contact-us">
+                <h3 class="page__section-4--subtitle">Контакти:</h3>
+                <a 
+                href="https://goo.gl/maps/yAiLJhE2bEXDN3UM8"
+                class="contact-us__info-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+              </a>
+              <a 
+                href="tel:+38 (044) 278-13-57"
+                class="contact-us__info-link"
+              >
+                тел. +38 (044) 278-13-57 <br>
+              </a>
+              <a 
+                href="tel:+38 (044) 278-74-54"
+                class="contact-us__info-link"
+              >
+                факс +38 (044) 278-74-54 <br>
+              </a>
+              <a 
+                href="email:info@namu.kiev.ua"
+                class="contact-us__info-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+              </div>
+            </div>
+            <div class="to-top">
+              <a href="#page-top" class="to-top__up">
+                <img src="images/arrow-up.svg" alt="arrow-up">
+              </a>
+            </div>
+          </div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--2-5
+                grid__item--Desktop--6-7">
+              <div class="page__section-4--retangle"></div>
+            </div>
+          </div>
+          <div 
+            class="
+              grid
+              grid--Tablet
+              grid--Desktop">
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--2-3
+                grid__item--Desktop--8-9">
+              <ul class="page__section-4--nav">
+                <li class="page__section-4--item">
+                  <a href="#gallery" class="page__section-4--list">Галерея</a>
+                </li>
+                <li class="page__section-4--item">
+                  <a href="#events" class="page__section-4--list">Виставки та події</a>
+                </li>
+              </ul>
+            </div>
+            <div 
+              class="
+                grid__item
+                grid__item--Tablet--4-5
+                grid__item--Desktop--10-11">
+              <ul class="page__section-4--nav">
+                <li class="page__section-4--item">
+                  <a href="#page-top" class="page__section-4--list">Про Нас</a>
+                </li>
+                <li class="page__section-4--item">
+                  <a href="#contacts" class="page__section-4--list">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer__information">
+          <div>Designed by Zhyriada Marina</div>
+          <div>Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
